--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@prisma/client": "^4.5.0",
     "axios": "^1.1.3",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "node-cron": "^3.0.2",
     "python-shell": "^3.0.1"
   }
 }
